syntax = "proto3";

option java_multiple_files = true;
option java_package = "tech.takenoko.screenmirror.proto";

package proto;

service ImageDomain {
    rpc getImage (ImageRequest) returns (ImageReply);
}

message ImageRequest {
    bytes image = 1;
}

message ImageReply {
    bytes image = 1;
}
